--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,31 +3,23 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>MIs mascotas</ion-title>
+    <ion-title>Mis mascotas</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content class="card-background-page">
       <ion-grid>
           <ion-row>
-            <ion-col col-6>
-                <ion-card (click)="dogDetails()">
+            <ion-col col-6 *ngFor="let pet of pets">
+                <ion-card (click)="dogDetails(pet.id)">
                     <img src="assets/imgs/filo.png"/>
-                    <div class="card-title">Filomeno</div>
-                  </ion-card>
-            </ion-col>
-            <ion-col col-6>
-                <ion-card>
-                    <img src="assets/imgs/filo.png"/>
-                    <div class="card-title">Doky</div>
-                  </ion-card>
-            </ion-col>
-            <ion-col col-6>
-                <ion-card>
-                    <img src="assets/imgs/filo.png"/>
-                    <div class="card-title">São Paulo</div>
+                    <div class="card-title">{{pet.name}}</div>
                   </ion-card>
             </ion-col>
           </ion-row>
         </ion-grid>
+
+        <ion-fab bottom right>
+          <button ion-fab mini color="green-app" (click)="newPet()"><ion-icon name="add"></ion-icon></button>
+        </ion-fab>
 </ion-content>
