--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,6 @@
-<ion-content padding>
+<ion-content>
 
-  <img src="assets/imgs/iconpet.png" class="logo" alt="">
+  <!--<img src="assets/imgs/iconpet.png" class="logo" alt="">
 
   <ion-row>
     <ion-col>
@@ -9,13 +9,13 @@
           <span item-left>
             <ion-icon name="mail"></ion-icon>
           </span>
-          <ion-input type="text" placeholder="Correo electrónico" name="username" [(ngModel)]="userName" required></ion-input>
+          <ion-input type="text" placeholder="Correo electrónico" name="username" [(ngModel)]="user.email" required></ion-input>
         </ion-item>
         <ion-item>
           <span item-left>
             <ion-icon name="key"></ion-icon>
           </span>
-          <ion-input type="password" placeholder="Contraseña" name="password" [(ngModel)]="password" required></ion-input>
+          <ion-input type="password" placeholder="Contraseña" name="password" [(ngModel)]="user.password" required></ion-input>
         </ion-item>
       </ion-list>
     </ion-col>
@@ -29,15 +29,103 @@
   </div>
   <ion-row>
     <ion-col col-12 class="signup-col">
-      <button ion-button color="green-app" round class="submit-btn" full (click)="signIn()">Entrar</button>
-      <!--<button ion-button class="register-btn" block clear (click)="createAccount()">Create New Account</button>-->
+      <button ion-button color="green-app" round class="submit-btn" full (click)="login()">Entrar</button>
     </ion-col>
     <ion-col col-12 full class="signup-col text-center" >
         <button ion-button color="light"  clear>Recuperar Contraseña</button>
       </ion-col>
     <ion-col col-12  class="signup-col">
       <button ion-button class="submit-btn" round full (click)="signIn()">Crear Cuenta</button>
-      <!--<button ion-button class="register-btn" block clear (click)="createAccount()">Create New Account</button>-->
     </ion-col>
-  </ion-row>
+  </ion-row>-->
+  <div class="center">
+    <div class="ear ear--left"></div>
+    <div class="ear ear--right"></div>
+    <div class="face">
+      <div class="eyes">
+        <div class="eye eye--left">
+          <div class="glow"></div>
+        </div>
+        <div class="eye eye--right">
+          <div class="glow"></div>
+        </div>
+      </div>
+      <div class="nose">
+        <svg width="38.161" height="22.03">
+          <path
+            d="M2.017 10.987Q-.563 7.513.157 4.754C.877 1.994 2.976.135 6.164.093 16.4-.04 22.293-.022 32.048.093c3.501.042 5.48 2.081 6.02 4.661q.54 2.579-2.051 6.233-8.612 10.979-16.664 11.043-8.053.063-17.336-11.043z"
+            fill="#243946"></path>
+        </svg>
+        <div class="glow"></div>
+      </div>
+      <div class="mouth">
+        <svg class="smile" viewBox="-2 -2 84 23" width="84" height="23">
+          <path d="M0 0c3.76 9.279 9.69 18.98 26.712 19.238 17.022.258 10.72.258 28 0S75.959 9.182 79.987.161"
+            fill="none" stroke-width="3" stroke-linecap="square" stroke-miterlimit="3"></path>
+        </svg>
+        <div class="mouth-hole"></div>
+        <div class="tongue breath">
+          <div class="tongue-top"></div>
+          <div class="line"></div>
+          <div class="median"></div>
+        </div>
+      </div>
+    </div>
+    <div class="hands">
+      <div class="hand hand--left">
+        <div class="finger">
+          <div class="bone"></div>
+          <div class="nail"></div>
+        </div>
+        <div class="finger">
+          <div class="bone"></div>
+          <div class="nail"></div>
+        </div>
+        <div class="finger">
+          <div class="bone"></div>
+          <div class="nail"></div>
+        </div>
+      </div>
+      <div class="hand hand--right">
+        <div class="finger">
+          <div class="bone"></div>
+          <div class="nail"></div>
+        </div>
+        <div class="finger">
+          <div class="bone"></div>
+          <div class="nail"></div>
+        </div>
+        <div class="finger">
+          <div class="bone"></div>
+          <div class="nail"></div>
+        </div>
+      </div>
+    </div>
+    <div class="login">
+      <label>
+        <div class="fa fa-phone"></div>
+        <input class="username" type="text" autocomplete="on" [(ngModel)]="user.email" placeholder="Email" />
+      </label>
+      <label>
+        <div class="fa fa-commenting"></div>
+        <input class="password" type="password" autocomplete="off" [(ngModel)]="user.password" placeholder="Contraseña" />
+        <button class="password-button">
+          <ion-icon name="eye"></ion-icon>
+        </button>
+      </label>
+      <button class="login-button" (click)="login()">Iniciar</button>
+    </div>
+    <div class="social-buttons">
+      <div class="social">
+        <div class="fa fa-wechat"></div>
+      </div>
+      <div class="social">
+        <div class="fa fa-weibo"></div>
+      </div>
+      <div class="social">
+        <div class="fa fa-paw"></div>
+      </div>
+    </div>
+    <div class="footer">随机文本</div>
+  </div>
 </ion-content>
